# api/openapi.yaml
@@ -235,7 +235,17 @@ paths:
           in: query
           schema:
             type: string
-            enum: [offer, rejection, assessment_invite, general, application_received]
+            enum:
+              [
+                offer,
+                offer_withdrawal,
+                rejection,
+                assessment_invite,
+                assessment_completion,
+                interview_invite,
+                general,
+                application_received,
+              ]
       responses:
         "200":
           description: List of offer/email templates
@@ -1480,7 +1490,17 @@ components:
         type:
           {
             type: string,
-            enum: [offer, rejection, assessment_invite, general, application_received],
+            enum:
+              [
+                offer,
+                offer_withdrawal,
+                rejection,
+                assessment_invite,
+                assessment_completion,
+                interview_invite,
+                general,
+                application_received,
+              ],
             example: "offer",
           }
         subject:
